// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contact renders hidden failed 1`] = `
<div>
  <section
    class="sio__contact sio__contact--hidden"
  >
    <svg
      class="sio__xmark"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.404 16l9.9 9.9-2.404 2.404-9.9-9.9-9.9 9.9L3.696 25.9l9.9-9.9-9.9-9.898L6.1 3.698l9.9 9.899 9.9-9.9 2.404 2.406-9.9 9.898z"
        fill="currentColor"
      />
    </svg>
    <p>
      Oops, there was an issue sending your message. Please try again later.
    </p>
  </section>
</div>
`;

exports[`Contact renders hidden pending 1`] = `
<div>
  <section
    class="sio__contact sio__contact--hidden"
  >
    <form
      action="/send-message-no-js"
      method="post"
    >
      <label>
        Return Email
        <input
          class="sio__email"
          name="email"
          type="email"
          value=""
        />
      </label>
      <label>
        Message
        <textarea
          class="sio__message"
          name="message"
        />
      </label>
      <button
        class="sio__submit-btn"
      >
        SUBMIT
      </button>
    </form>
  </section>
</div>
`;

exports[`Contact renders hidden successful 1`] = `
<div>
  <section
    class="sio__contact sio__contact--hidden"
  >
    <svg
      class="sio__checkmark"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.927 22l-6.882-6.883-3 3L11.927 28 31.204 8.728l-3.001-3.001z"
        fill="currentColor"
      />
    </svg>
    <p>
      Thank you for your submission. I'll be in touch as soon as possible.
    </p>
  </section>
</div>
`;

exports[`Contact renders visible failed 1`] = `
<div>
  <section
    class="sio__contact"
  >
    <svg
      class="sio__xmark"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M18.404 16l9.9 9.9-2.404 2.404-9.9-9.9-9.9 9.9L3.696 25.9l9.9-9.9-9.9-9.898L6.1 3.698l9.9 9.899 9.9-9.9 2.404 2.406-9.9 9.898z"
        fill="currentColor"
      />
    </svg>
    <p>
      Oops, there was an issue sending your message. Please try again later.
    </p>
  </section>
</div>
`;

exports[`Contact renders visible pending 1`] = `
<div>
  <section
    class="sio__contact"
  >
    <form
      action="/send-message-no-js"
      method="post"
    >
      <label>
        Return Email
        <input
          class="sio__email"
          name="email"
          type="email"
          value=""
        />
      </label>
      <label>
        Message
        <textarea
          class="sio__message"
          name="message"
        />
      </label>
      <button
        class="sio__submit-btn"
      >
        SUBMIT
      </button>
    </form>
  </section>
</div>
`;

exports[`Contact renders visible successful 1`] = `
<div>
  <section
    class="sio__contact"
  >
    <svg
      class="sio__checkmark"
      height="32"
      viewBox="0 0 32 32"
      width="32"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M11.927 22l-6.882-6.883-3 3L11.927 28 31.204 8.728l-3.001-3.001z"
        fill="currentColor"
      />
    </svg>
    <p>
      Thank you for your submission. I'll be in touch as soon as possible.
    </p>
  </section>
</div>
`;
